Added new route `/cart/remove/{product}` for removing a product from the cart. Updated openapi as well.
